# alert_stream

./: .gitattributes  .lfsconfig  COPYRIGHT  Dockerfile  README.md  README.rst  docker-compose.yml  setup.cfg
data/: alerts_11574.avro  alerts_11575.avro  alerts_11576.avro  alerts_11577.avro
docker/: setup-hosts.sh
kubernetes/: README.md  alert-data-persistentvolumeclaim.yaml  consumer1-deployment.yaml  consumer10-deployment.yaml  consumer2-deployment.yaml  consumer3-deployment.yaml  consumer4-deployment.yaml  consumer5-deployment.yaml  consumer6-deployment.yaml  consumer7-deployment.yaml  consumer8-deployment.yaml  consumer9-deployment.yaml  consumerall-deployment.yaml  docker-compose.yml  filterer1-deployment.yaml  filterer2-deployment.yaml  filterer3-deployment.yaml  filterer4-deployment.yaml  filterer5-deployment.yaml  kafka-deployment.yaml  kafka-service.yaml  run.sh  sender-deployment.yaml  sender-volume-deployment.yaml  zookeeper-deployment.yaml  zookeeper-service.yaml
mirrormaker/: README.md  mm_consumer01.properties  mm_consumer02.properties  mm_consumer03.properties  mm_consumer04.properties  mm_consumer05.properties  mm_producer01.properties  mm_producer02.properties  mm_producer03.properties  mm_producer04.properties  mm_producer05.properties  runMM.sh
python/lsst/alert/stream/: __init__.py  alertConsumer.py  alertProducer.py  avroAlertGen.py  filters.py  (+4 more)
swarm/: Docker.tmpl  README.md  deploy_all.sh  run_consumers.sh  run_filters.sh  run_kafka.sh  run_kafkamirrors.sh  run_mirrormakers.sh  run_sender.sh  run_zoomirrors.sh
test/: test_serialization.py
