[metadata]
name = lsst-alert-stream
version = 0.1.0
description = Code for interacting with the Vera C. Rubin Observatory alert stream
url = https://github.com/lsst-dm/alert_stream
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Development Status :: 3 - Alpha
author = Spencer Nelson
author_email = swnelson@uw.edu
license = GPLv3

[options]
install_requires =
    fastavro
    lsst-alert-packet
packages =
    lsst.alert.stream
package_dir =
    =python
